# Sail-Tracker

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  main.py  pyproject.toml  tracker.ipynb  tracker_tools.py
.github/: FUNDING.yml
.github/workflows/: update.yml
Tracker_fleet_YCC/: LICENSE  index.html  menu.html
Tracker_fleet_YCC/DATA_SAVES/: SAVE__06_07_2023_22_11_29.csv  SAVE__06_07_2023_22_31_51.csv  SAVE__06_07_2023_22_42_55.csv  SAVE__08_07_2023_19_05_57.csv  SAVE__08_07_2023_19_09_45.csv  SAVE__08_07_2023_21_16_01.csv  SAVE__09_07_2023_14_23_22.csv  SAVE__09_07_2023_14_27_24.csv  SAVE__09_07_2023_14_49_26.csv  SAVE__09_07_2023_14_53_34.csv  SAVE__09_07_2023_14_57_35.csv  SAVE__09_07_2023_15_01_37.csv  SAVE__09_07_2023_15_05_41.csv  SAVE__09_07_2023_15_09_50.csv  SAVE__09_07_2023_15_14_07.csv  SAVE__09_07_2023_19_10_25.csv  SAVE__10_07_2023_09_52_34.csv  SAVE__10_07_2023_09_57_19.csv  SAVE__10_07_2023_12_11_02.csv  SAVE__10_07_2023_12_15_18.csv  SAVE__10_07_2023_12_19_48.csv  SAVE__10_07_2023_12_24_13.csv  SAVE__10_07_2023_14_32_57.csv  SAVE__10_07_2023_14_37_11.csv  SAVE__10_07_2023_14_41_20.csv  SAVE__10_07_2023_14_45_36.csv  SAVE__10_07_2023_14_49_43.csv  SAVE__13_07_2023_11_26_35.csv  SAVE__13_07_2023_11_30_51.csv  SAVE__13_07_2023_11_34_59.csv  SAVE__13_07_2023_11_39_06.csv  SAVE__13_07_2023_11_43_12.csv  SAVE__15_07_2023_09_45_04.csv  SAVE__15_07_2023_15_16_21.csv  SAVE__15_07_2023_15_20_23.csv  SAVE__15_07_2023_15_24_24.csv  SAVE__15_07_2023_15_28_32.csv  SAVE__21_10_2023_19_03_39.csv  SAVE__21_10_2023_19_10_39.csv  (+2 more)
(+7 files in other folders)
