[tool.poetry]
name = "pierre-cau"
description = "FleetyTracker Server"
authors = ["Pierre CAU <pcaupro@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pandas = "^1.4.4"
numpy = "^1.21.5"
aisexplorer = "^0.1.0"
folium = "^0.13.0"
urllib3 = "^1.26.7"
tqdm = "^4.62.3"
requests = "^2.26.0"
bs4 = "^0.0.1"
datetime = "^4.3"
time = "^1.0"
random = "^0.0"
re = "^2.2.1"
os = "^0.1.1"





[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"